# auto-env-generator

./: Cargo.toml  LICENSE  README.md  autoenv.toml.example
benches/: scan_performance.rs
example-project/: .env
example-project/src/: main.rs
examples/: .env.example  web_server.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
