[package]
name = "auto-env-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autoenv"
path = "src/main.rs"

[lib]
name = "auto_env_generator"
path = "src/lib.rs"

[dependencies]
rayon = "1.8"
memchr = "2.6"
aho-corasick = "1.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "scan_performance"
harness = false
