[package]
name = "auto-env-generator"
version = "0.1.0"
edition = "2024"
authors = ["Darkobyte <gianluca.sima@icloud.com>"]
description = "Fast, parallel Rust tool for automatically scanning codebases and generating .env files based on detected environment variable usage"
documentation = "https://docs.rs/auto-env-generator"
homepage = "https://github.com/darkobyte/auto-env-generator"
repository = "https://github.com/darkobyte/auto-env-generator"
license = "MIT"
keywords = ["env", "environment", "dotenv", "cli", "automation"]
categories = ["command-line-utilities", "development-tools", "config"]
readme = "README.md"
include = [
    "src/**/*",
    "benches/**/*",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "autoenv.toml.example",
]

[[bin]]
name = "autoenv"
path = "src/main.rs"

[lib]
name = "auto_env_generator"
path = "src/lib.rs"

[dependencies]
rayon = "1.8"
memchr = "2.6"
aho-corasick = "1.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "scan_performance"
harness = false
